# AI-Trader

./: .gitignore  CONTRIBUTING.md  DataSourceDoc.md  Polygon.ioOptionEndPointsDocs.md  Polygon.ioStockEndPointsDocs.md  ProjectBrief.md  README.md  evaluateExpiredTrades.md  package-lock.json  package.json  vercel.json
.codex/: AGENT_GUIDE.md  DECISIONS.md  DESIGN_SCOPE.md  GUIDELINES.md  README.md  RUNBOOK.md  TODO.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
client/: .env.example  .eslintrc.cjs   .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json   vercel.json  vite.config.ts
client/public/: index.html
client/src/: App.jsx  App.tsx  main.css  main.tsx  vite-env.d.ts
docs/: architecture.md  roadmap.md
feature-store/definitions/: liquidity_feature_view.py
feature-store/online/: redis.yml
infrastructure/docker/: api-gateway.Dockerfile  docker-compose.yml  frontend.Dockerfile  go-service.Dockerfile  python-service.Dockerfile
infrastructure/k8s/: recommendation-stack.yaml
infrastructure/terraform/: main.tf
pipelines/dbt/: dbt_project.yml  profiles.yml
schemas/: recommendation-request.schema.json  recommendation-response.schema.json
server/: .env.example  .gitignore  README.md  package.json  server.js
server/auth/: passport.js
server/config/: db.js
server/controllers/: authController.js  capitolTradesController.js  cleanupController.js  tradeController.js
server/jobs/: evaluateExpiredTrades.js  migrateCongressTrades.js  scanTickers.js
server/middleware/: ensureAuth.js
server/models/: Trade.js  TradeRecommendation.js  TradeScan.js  UserModel.js
server/routes/: authRoutes.js  scraperRoutes.js  tradeRoutes.js
server/scrapers/: scrapeCapitolTrades.js  scrapePoliticianProfile.js  tickerToIssuerId.js
server/utils/: TradeScan.js  calculateIndicators.js  enrichTickerData.js  getAffordableOptionContracts.js  getCongressTrades.js  getMinuteCandles.js  getNewsSentiment.js  getOptionSnapshot.js  getStockPrice.js  openaiAssistant.js
services/ai-orchestrator/: pyproject.toml
services/ai-orchestrator/app/: main.py  schemas.py  service.py
services/ai-orchestrator/app/prompting/: system_prompt.txt
services/api-gateway/: .eslintrc.json  package.json  tsconfig.build.json  tsconfig.json
services/data-ingestion/: go.mod
services/market-data/: pyproject.toml
services/market-data/app/: config.py  main.py  redis_client.py  service.py
services/market-data/tests/: test_service.py
services/options-analytics/: pyproject.toml
services/options-analytics/app/: main.py  schemas.py  service.py
services/options-analytics/app/clients/: __init__.py  market_data.py
services/options-analytics/tests/: test_service.py
services/recommendation-engine/: pyproject.toml
services/recommendation-engine/app/: feature_store.py  main.py  model_registry.py  schemas.py  service.py
services/recommendation-engine/tests/: test_engine.py
services/signals-service/: pyproject.toml
services/signals-service/app/: main.py  repository.py  schemas.py  service.py
services/signals-service/tests/: test_service.py
(+75 files in other folders)
