[project]
name = "ai-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5",
  "pydantic>=2.9.2",
  "uvicorn>=0.32.1",
  "pgvector>=0.2.5",
  "httpx>=0.27.2"
]

description = "LLM gateway orchestrating RAG + tool calls for explanations."

[tool.ruff]
line-length = 100
