[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "0.1.0"
requires-python = ">=3.11"
description = "Market data API for equity snapshots and options chains backed by Redis."
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn>=0.32.1",
  "redis>=5.2.0",
  "pydantic>=2.9.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
