[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-analytics"
version = "0.1.0"
description = "Delta, IV, liquidity, and suitability scoring service for options contracts."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn>=0.32.1",
  "pydantic>=2.9.2",
  "redis>=5.2.0",
  "timescale-ts>=0.5.0",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "httpx>=0.27.2"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.7.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
