[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendation-engine"
version = "0.1.0"
requires-python = ">=3.11"
description = "Hybrid rule + ML scorer producing options recommendations."
dependencies = [
  "fastapi>=0.115.5",
  "pydantic>=2.9.2",
  "uvicorn>=0.32.1",
  "numpy>=2.1.3",
  "lightgbm>=4.5.0",
  "mlflow>=2.17.0",
  "feast>=0.34.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
