[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signals-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "Technical, sentiment, congressional and macro signal aggregation service."
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn>=0.32.1",
  "pydantic>=2.9.2",
  "pandas>=2.2.3",
  "numpy>=2.1.3",
  "asyncpg>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
